...
                      Padding(
                        padding: const EdgeInsets.only(
                            left: 8.0, top: 8.0, right: 8.0, bottom: 2.0),
                        child: Row(
                          children: [
                            Text(
                              key: const Key('songHeader_songTitle'),
                              currentSong.title,
                              style: Theme.of(context).textTheme.headlineLarge,
                            ),

                            //================================================================
                            //Edit Button
...
                      Padding(
                        padding: const EdgeInsets.only(
                            left: 8.0, top: 0.0, right: 8.0, bottom: 8.0),
                        child: Row(
                          children: [
                            Text(
                              key: const Key('songHeader_songArtist'),
                              currentSong.artist,
                              style: Theme.of(context).textTheme.headlineSmall,
                            ),
                          ],
                        ),
                      ),
...
