...
              ),

              //================================================================================================
              // Add a Song btn
              // This is the button that adds a new song to our list
              IconButton(
                key: const Key('songList_btnAddSong'),
                icon: const Icon(Icons.add),
                onPressed: () {
                  showDialog(
                    context: context,
                    builder: (BuildContext context) {
                      return ChangeNotifierProvider<SongProvider>.value(
...
