...
                    
                    
                    
                    //================================================================
                    //Add Section button
                    child: IconButton(
                      key: const Key('songList_btnAddSection'),
                      padding: EdgeInsets.zero, // Remove padding
                      icon: const Icon(Icons.add, size: 20.0), // Set icon size
                      onPressed: () async {
                        final Section? result = await showDialog(
                          context: context,
                          builder: (BuildContext context) {
...
